--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,12 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-lindera = "0.7.1"
-lindera-core = "0.7.1"
-wasm-bindgen = "0.2"
-serde_json = "*"
+lindera = "0.27.1"
+lindera-core = "0.27.1"
+lindera-dictionary = "0.27.1"
+lindera-tokenizer = { version = "0.27.1", features = ["ipadic"] }
+lindera-analyzer = { version = "0.27.1", features = ["ipadic", "ipadic-filter"] }
+
+wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
+serde-wasm-bindgen = "0.6.3"
+serde_json = "1.0.108"
