--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 lindera = "0.27.1"
 lindera-core = "0.27.1"
-lindera-dictionary = "0.27.1"
+lindera-dictionary = { version = "0.27.1", features = ["ipadic"] }
 lindera-tokenizer = { version = "0.27.1", features = ["ipadic"] }
 lindera-analyzer = { version = "0.27.1", features = ["ipadic", "ipadic-filter"] }
 
