--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,12 +11,19 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Build
-        run: cargo build --verbose
-      - name: Run tests
-        run: cargo test --verbose
+    - uses: actions/checkout@v3
+    - run: cargo install wasm-pack
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: wasm-pack build --target web
+    - name: Commit and Push
+      run: |
+        git config --global user.name 'GitHub Actions'
+        git config --global user.email 'github-actions@github.com'
+        git add -A  # Add all changed files
+        git commit -m "Add built Wasm files" || exit 0  # Don't fail if no changes
+        git push origin main || echo "No changes to push"
